# DADS5250-GenAI

./: .gitignore  CLAUDE.md  CourseHome.html  index.html
.claude/: settings.local.json
.claude/commands/: gen-image.md  maestro.md  nb-pro.md  picker.md
.github/workflows/: model-lint.yml
images/: cover-prompts.md  cover-review.html  cover-variants-picker.html  m08-cover-picker.html
labs/: README.md
labs/M01/: M01_Lab1_API_Basics.ipynb  M01_Lab2_Parameters_Tokens.ipynb
labs/M02/: M02_Lab1_Excel_GPT.ipynb  M02_Lab1_Prompting_Techniques.ipynb  M02_Lab2_Bitcoin_Analyzer.ipynb  M02_Lab2_System_Messages_Templates.ipynb
labs/M03/: M03_Lab1_JSON_Mode_Pydantic.ipynb  M03_Lab1_Prompting_Techniques.ipynb  M03_Lab2_Function_Calling.ipynb  M03_Lab2_JSON_Mode_Pydantic.ipynb
labs/M03_prompting_old/: M02_Lab1_Prompting_Techniques.ipynb
labs/M04/: M04_Lab1_LangChain_Basics.ipynb  M04_Lab2_Beer_Game.ipynb
labs/M05/: M05_Lab1_Embeddings_VectorStores.ipynb  M05_Lab2_RAG_Pipeline.ipynb
planning/: course-outline.html  course-planner.html  design-decisions.html  header-style-picker.html  lab-design-survey.html  module-plan.html  pick-image-style.html
scripts/: DADS5250_All_Scripts.txt  TEMPLATE_Script.html  check_model_names.py  export_all_scripts.py
tools/: build_lab.py  build_m02_lab2.py  build_m10_lab1.py  build_m10_lab2.py  build_m12_lab1.py  build_m13_lab1.py  build_m13_lab2.py  port_from_appliedgenai.py  refresh_dads_lab.py  smoke_test.py  split_rag_lab.py
utils/: pyproject.toml
utils/dads5250/: __init__.py  api.py  cost.py  display.py  quiz.py
(+100 files in other folders)
